Validator progress