@@ -9,6 +9,9 @@ repositories {
     mavenCentral()
 }
 
+targetCompatibility = 14
+sourceCompatibility = 14
+
 dependencies {
     compile 'joda-time:joda-time:2.10.8'
     compile 'org.json:json:20200518'
@@ -16,6 +19,22 @@ dependencies {
     compile 'org.apache.kafka:kafka-streams:2.6.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).all {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
 jar {
